2011-10-31 Raphael Neider <rneider AT web.de>

	* src/pic14/device.c (init_pic): reformatted,
	  fixup enhanced cores' name for INDF
	* src/pic14/pcode.c, src/pic14/pcode.h, src/pic14/ralloc.h:
	  provide indirect memory access registers for enhanced cores
	* src/pic14/gen.c (setup_fsr):
	  setup FSR0L and FSR0H on enhanced cores,
	  fix access to INDF vs. INDF0, closes #3431024

2011-10-30 Raphael Neider <rneider AT web.de>

	* src/pic14/device.c, src/pic14/device.h,
	  device/include/pic14/pic14devices.txt:
	  declare enhanced cores as such
	* src/pic14/gen.c:
	  do not save/restore W, STATUS, BSR, FSRx, or PCLATH around
	  interrupts on enhanced devices, as these registers will be
	  saved automatically and FSR is not present on these devices

2011-10-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (processParams): fixed bug #3424385

2011-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkmain.c (main): fixed banking, bug 3420365
	* src/SDCCast.c: cosmetics

2011-10-25 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, Makefile.in, device/lib/z180/Makefile.in,
	  device/lib/z180/Makefile, device/lib/z80/Makefile.in,
	  device/lib/gbz80/Makefile.in, device/lib/ds390/Makefile.in,
	  device/lib/Makefile.in, device/lib/ds400/Makefile.in,
	  device/lib/ds400/ds400rom.c, device/lib/mcs51/Makefile.in,
	  device/lib/r2k/Makefile.in, device/lib/hc08/Makefile.in,
	  device/non-free/lib/Makefile.in, all.vcxproj,
	  doc/sdccman.lyx, sdcc.sln. support/scripts/sdcc.nsi:
	  asranlib renamed to sdranlib
	* sdas/asranlib/*: sdas/asranlib moved to support/sdranlib

2011-10-23 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt:
	  fix config word addresses for 12f1822/3, add 16f1934/6/7 family

2011-10-21 Raphael Neider <rneider AT web.de>

	* src/pic14/device.c, src/pic14/device.h, src/pic14/ralloc.c:
	  rewrite config word handling to support locations other than